feat(js): login con prompt

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         </td>
       </tr>
     </table>
+
+    <button onclick="login()">Login</button>
+    <button onclick="registrarUsuario()">Register</button>
   </body>
   <script src="script.js"></script>
 </html>
