Modulo JS - Ejercicio 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </table>
 
     <button onclick="login()">Login</button>
-    <button onclick="registrarUsuario()">Register</button>
+    <button onclick="solicitarUsuario()">Register</button>
+    <button onclick="agregarProducto()" id="adminbutton" style="display: none">
+      + Producto
+    </button>
   </body>
   <script src="script.js"></script>
 </html>
