fix(script.js): user not found | feat(script.js): add user & Sing out

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <button onclick="agregarProducto()" id="adminbutton" style="display: none">
       + Producto
     </button>
+    <button onclick="salirSesion()" id="salirbutton" style="display: none">
+      Salir
+    </button>
   </body>
   <script src="script.js"></script>
 </html>
