feat(script.js): add products to dom

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 
     <button onclick="login()">Login</button>
     <button onclick="solicitarUsuario()">Register</button>
-    <button onclick="agregarProducto()" id="adminbutton" style="display: none">
+    <button
+      onclick="solicitarProducto()"
+      id="adminbutton"
+      style="display: none"
+    >
       + Producto
     </button>
     <button onclick="salirSesion()" id="salirbutton" style="display: none">
