Clase JS 10-08 | Add localStorage

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <button onclick="salirSesion()" id="salirbutton" style="display: none">
       Salir
     </button>
+    <button onclick="guardarProducto()" id="guardarproduct">Guardar Productos</button>
+    <button onclick="cargarProductos()" id = "cargarproductosbtn">Cargar Productos</button>
   </body>
   <script src="script.js"></script>
 </html>
